[gd_scene load_steps=5 format=2]

[ext_resource path="res://fonts/cotham-sans/cotham_16.tres" type="DynamicFont" id=1]
[ext_resource path="res://images/godot_logo.png" type="Texture" id=2]
[ext_resource path="res://images/firejam-logo.png" type="Texture" id=3]
[ext_resource path="res://views/credit_clicks.gd" type="Script" id=4]

[node name="credit_first_column" type="VBoxContainer"]
margin_right = 363.0
margin_bottom = 563.0
size_flags_horizontal = 3
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
page = "left"

[node name="Control" type="Control" parent="."]
margin_right = 363.0
margin_bottom = 15.0
rect_min_size = Vector2( 0, 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="thanks_headline" type="Label" parent="."]
margin_top = 19.0
margin_right = 363.0
margin_bottom = 33.0
text = "CR_THANKS_PLAYING"

[node name="HSeparator" type="HSeparator" parent="."]
margin_top = 37.0
margin_right = 363.0
margin_bottom = 41.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CR_TY_2" type="RichTextLabel" parent="."]
margin_top = 45.0
margin_right = 363.0
margin_bottom = 62.0
custom_fonts/normal_font = ExtResource( 1 )
bbcode_enabled = true
bbcode_text = "CR_TY_2"
text = "CR_TY_2"
fit_content_height = true

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
margin_top = 66.0
margin_right = 363.0
margin_bottom = 116.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CR_MADE_FOR" type="RichTextLabel" parent="HBoxContainer2"]
margin_right = 179.0
margin_bottom = 50.0
size_flags_horizontal = 3
custom_fonts/normal_font = ExtResource( 1 )
bbcode_enabled = true
bbcode_text = "CR_MADE_FOR"
text = "CR_MADE_FOR"
fit_content_height = true

[node name="firejam_logo" type="TextureButton" parent="HBoxContainer2"]
margin_left = 183.0
margin_right = 363.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )
expand = true
stretch_mode = 5

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_top = 120.0
margin_right = 363.0
margin_bottom = 170.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="godot_logo" type="TextureButton" parent="HBoxContainer"]
margin_right = 179.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )
expand = true
stretch_mode = 5

[node name="CR_GODOT_WHAT" type="RichTextLabel" parent="HBoxContainer"]
margin_left = 183.0
margin_right = 363.0
margin_bottom = 50.0
size_flags_horizontal = 3
custom_fonts/normal_font = ExtResource( 1 )
bbcode_enabled = true
bbcode_text = "CR_GODOT_WHAT"
text = "CR_GODOT_WHAT"
fit_content_height = true

[node name="assets_used" type="Label" parent="."]
margin_top = 174.0
margin_right = 363.0
margin_bottom = 188.0
text = "CR_ASSETS_USED"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator2" type="HSeparator" parent="."]
margin_top = 192.0
margin_right = 363.0
margin_bottom = 196.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CR_ASSETS_BB" type="RichTextLabel" parent="."]
margin_top = 200.0
margin_right = 363.0
margin_bottom = 217.0
custom_fonts/normal_font = ExtResource( 1 )
bbcode_enabled = true
bbcode_text = "CR_ASSETS_BB"
text = "CR_ASSETS_BB"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bottom_pad" type="Control" parent="."]
margin_top = 221.0
margin_right = 363.0
margin_bottom = 236.0
rect_min_size = Vector2( 0, 15 )

[connection signal="meta_clicked" from="CR_TY_2" to="." method="_on_meta_clicked"]
[connection signal="meta_clicked" from="HBoxContainer2/CR_MADE_FOR" to="." method="_on_meta_clicked"]
[connection signal="pressed" from="HBoxContainer2/firejam_logo" to="." method="_on_firejam_logo_pressed"]
[connection signal="pressed" from="HBoxContainer/godot_logo" to="." method="_on_godot_logo_pressed"]
[connection signal="meta_clicked" from="HBoxContainer/CR_GODOT_WHAT" to="." method="_on_meta_clicked"]
[connection signal="meta_clicked" from="CR_ASSETS_BB" to="." method="_on_meta_clicked"]
