[gd_scene load_steps=4 format=2]

[ext_resource path="res://fonts/cotham-sans/cotham_16.tres" type="DynamicFont" id=1]
[ext_resource path="res://images/duckcowdrive-thumb.jpg" type="Texture" id=2]
[ext_resource path="res://views/credit_clicks.gd" type="Script" id=3]

[node name="credit_second_column" type="VBoxContainer"]
margin_left = 391.0
margin_right = 754.0
margin_bottom = 563.0
size_flags_horizontal = 3
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
page = "right"

[node name="Control" type="Control" parent="."]
margin_right = 363.0
margin_bottom = 15.0
rect_min_size = Vector2( 0, 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back_to_menu" type="Button" parent="."]
margin_top = 19.0
margin_right = 363.0
margin_bottom = 49.0
rect_min_size = Vector2( 0, 30 )
custom_fonts/font = ExtResource( 1 )
text = "UI_BACK_TO_MENU"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bottom_pad2" type="Control" parent="."]
margin_top = 53.0
margin_right = 363.0
margin_bottom = 68.0
rect_min_size = Vector2( 0, 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="disclaimer" type="Label" parent="."]
margin_top = 72.0
margin_right = 363.0
margin_bottom = 86.0
text = "CR_DISCLAIMER"

[node name="HSeparator" type="HSeparator" parent="."]
margin_top = 90.0
margin_right = 363.0
margin_bottom = 94.0

[node name="CR_AS_IS_BB" type="RichTextLabel" parent="."]
margin_top = 98.0
margin_right = 363.0
margin_bottom = 115.0
custom_fonts/normal_font = ExtResource( 1 )
bbcode_enabled = true
bbcode_text = "CR_AS_IS_BB"
text = "CR_AS_IS_BB"
fit_content_height = true

[node name="bottom_pad3" type="Control" parent="."]
margin_top = 119.0
margin_right = 363.0
margin_bottom = 134.0
rect_min_size = Vector2( 0, 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="more_games" type="Label" parent="."]
margin_top = 138.0
margin_right = 363.0
margin_bottom = 152.0
text = "CR_MORE_GAMES"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator2" type="HSeparator" parent="."]
margin_top = 156.0
margin_right = 363.0
margin_bottom = 160.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CR_OTHER_BB" type="RichTextLabel" parent="."]
margin_top = 164.0
margin_right = 363.0
margin_bottom = 181.0
custom_fonts/normal_font = ExtResource( 1 )
bbcode_enabled = true
bbcode_text = "CR_OTHER_BB"
text = "CR_OTHER_BB"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dcd_teaser" type="TextureButton" parent="."]
margin_top = 185.0
margin_right = 363.0
margin_bottom = 315.0
rect_min_size = Vector2( 0, 130 )
size_flags_horizontal = 3
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bottom_pad" type="Control" parent="."]
margin_top = 319.0
margin_right = 363.0
margin_bottom = 334.0
rect_min_size = Vector2( 0, 15 )

[connection signal="pressed" from="back_to_menu" to="." method="_on_back_to_menu_pressed"]
[connection signal="meta_clicked" from="CR_AS_IS_BB" to="." method="_on_meta_clicked"]
[connection signal="meta_clicked" from="CR_OTHER_BB" to="." method="_on_meta_clicked"]
[connection signal="pressed" from="dcd_teaser" to="." method="_on_dcd_teaser_pressed"]
